feat: Add Google Search Console verification - Meta tag and complete guide

--- a/google-site-verification.html
+++ b/google-site-verification.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="LzQU8Nu4Qs_-LyvcPvLjtIeK_tNqkSGiE6BsRDuGJwI" />
     <title>Verificación de Google - AlmyWEB</title>
     <meta name="description" content="Página de verificación para Google Search Console - AlmyWEB desarrollo web Ecuador">
 </head>
@@ -10,8 +11,5 @@
     <h1>Verificación de Google Search Console</h1>
     <p>Esta página es para verificar la propiedad del sitio web AlmyWEB en Google Search Console.</p>
     <p>Desarrollo web Ecuador - Tu Imagen Digital</p>
-    
-    <!-- Google Search Console verification meta tag will be added here -->
-    <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" /> -->
 </body>
 </html>
